<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:foreground="?attr/selectableItemBackground"
    app:cardCornerRadius="16dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/user_avatar"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/ic_avatar_placeholder"
                android:scaleType="centerCrop"
                android:layout_marginEnd="8dp"
                android:background="@drawable/post_user_circle_bg"
                android:contentDescription="@string/avatar_description" />

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textSize="16sp"
                android:textStyle="bold"
                style="@style/FontRobotoRegular"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/post_media"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="12dp"
            android:scaleType="centerCrop"
            android:src="@drawable/image_placeholder"
            android:contentDescription="@string/preview_image" />

        <TextView
            android:id="@+id/post_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/post_title"
            android:textStyle="bold"
            style="@style/FontRobotoRegular"
            android:textColor="@color/black_text"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/post_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/post_description"
            style="@style/FontRobotoRegular"
            android:maxLines="2"
            android:ellipsize="end"
            android:layout_marginTop="4dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="start|center_vertical"
            android:layout_marginTop="12dp">

            <ImageView
                android:id="@+id/like_icon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_like_outline"
                android:contentDescription="@string/like"
                />

            <TextView
                android:id="@+id/like_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/like_count"
                android:textSize="14sp"
                android:textColor="@color/black_text"
                android:layout_marginStart="6dp" />
        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>
